--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,30 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  #  http: ^0.12.0+1
+  cached_network_image: ^0.7.0
+  shared_preferences: ^0.5.1+1
+  rxdart: ^0.21.0
+  #  flutter_facebook_login:
+  #  git:
+  #     url: https://github.com/roughike/flutter_facebook_login
+  #     ref: e69fef3
+  flutter_picker: ^1.0.9
+  shimmer: ^1.0.0
+  #  smooth_star_rating: 1.0.1
+  flushbar: ^1.3.0
+  #  carousel_slider: ^1.3.0
+  #  photo_view: ^0.2.2
+  #  image_picker: ^0.5.0+8
+  progress_hud: ^1.1.0
+  #  webview_flutter: ^0.3.5+3
+  #  image_cropper: ^1.0.0
+  dio: ^2.1.1
+  #  email_validator: ^1.0.0
+  #  flutter_web_view: ^0.0.6
+  #  flutter_webview_plugin: ^0.3.3
+  #  firebase_core: ^0.2.5
+  #  firebase_messaging: ^4.0.0+3
 
 dev_dependencies:
   flutter_test:
