--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -47,6 +50,7 @@ dependencies:
   #  flutter_webview_plugin: ^0.3.3
   #  firebase_core: ^0.2.5
   #  firebase_messaging: ^4.0.0+3
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
