--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   #  webview_flutter: ^0.3.5+3
   #  image_cropper: ^1.0.0
   dio: ^2.1.1
+  #  animator: ^0.1.4
   #  email_validator: ^1.0.0
   #  flutter_web_view: ^0.0.6
   #  flutter_webview_plugin: ^0.3.3
@@ -85,6 +86,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  assets:
+    - assets/locale/localization_en.json
+    - assets/locale/localization_ja.json
+    - assets/locale/localization_vi.json
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
