--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,3 +103,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+    - assets/images/commons/ic_setting.png
